--- a/manifest.json
+++ b/manifest.json
@@ -8,17 +8,17 @@
     "description": "Eine einfache Kalorien-Tracker Web App zur täglichen Erfassung von Kalorien und Wasser.",
     "icons": [
       {
-        "src": "img/icon.png",
+        "src": "img/icon96.png",
         "sizes": "96x96",
         "type": "image/png"
       },
       {
-        "src": "img/icon.png",
+        "src": "img/icon192.png",
         "sizes": "192x192",
         "type": "image/png"
       },
       {
-        "src": "img/icon.png",
+        "src": "img/icon512.png",
         "sizes": "512x512",
         "type": "image/png"
       }
