--- a/manifest.json
+++ b/manifest.json
@@ -21,6 +21,7 @@
         "src": "img/icon512.png",
         "sizes": "512x512",
         "type": "image/png"
+        "purpose": "any maskable"
       }
     ]
   }
