--- a/manifest.json
+++ b/manifest.json
@@ -20,7 +20,7 @@
       {
         "src": "img/icon512.png",
         "sizes": "512x512",
-        "type": "image/png"
+        "type": "image/png",
         "purpose": "any maskable"
       }
     ]
